<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Agenda mobile</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up_here">No have an account? You can sign up here</string>
    <string name="welcome">"Welcome !"</string>

    <!-- Sign up string -->
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password_confirm">Confirm password</string>

    <string name="agenda">Agenda</string>

    <!-- Error messages -->
    <string name="login_failed">"Login failed"</string>
    <string name="pass_info">Enter minimum 6 letters or numbers, no special characters</string>
    <string name="pass_not_match">The passwords do not match </string>
    <string name="invalid_email">Invalid E-Mail</string>
    <string name="incorrect_pass">Incorrect password</string>
    <string name="incorrect_pass_or_email">Incorrect password or password</string>
    <string name="invalid_params">Invalid params</string>
    <string name="error_image">Not was possible process the image</string>


    <!-- Cardcontact -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Are you sure you want to delete this contact?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="contact_edited">Contact updated</string>
    <string name="okey">Okey!</string>

    <!-- Contact -->
    <string name="new_contact">New contact</string>
    <string name="contact_name">Name</string>
    <string name="phone">Phone</string>
    <string name="img_contact">Image of contact (optional)</string>
    <string name="add_image">Add image</string>
    <string name="create_contact">Create contact</string>
    <string name="name_info">Only letters, numbers and parenthesis </string>
    <string name="phone_info">Only numbers (10 digits), parenthesis and the characters (+) and (-)</string>
    <string name="img_info">Image size max of 2MB and extension jpg or png</string>
    <string name="ok_contact">Contact Added</string>
    <string name="empty_contacts">You don\'t have contacts</string>

    <!-- Edit profile -->
    <string name="profile_tittle">Profile</string>
    <string name="change_pass">Change password</string>
    <string name="new_name">New name</string>
    <string name="new_email">New e-mail</string>
    <string name="new_pass">New password</string>

    <!-- Toolbar menu -->
    <string name="search_tittle">Search</string>
    <string name="close_session">Close session</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">invalid password</string>

    <!-- api messages -->
    <string name="login_error">The E-mail or password it\'s incorrect</string>
    <string name="ok_pass">The password was changed</string>
    <string name="ok_name">The username was changed</string>
    <string name="ok_email">The E-Mail was changed</string>
    <string name="email_unavailable">Email unavailable </string>
    <string name="error">The server can not realize the petition</string>
    <string name="retry_petition">Do you want retry the petition to the server?</string>


    <!-- Permissions -->
    <string name="permissions_tittle">Permissions info</string>
    <string name="permissions_description">Allow manually the permissions if you wanted add a custom image to your contact</string>

</resources>