<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_profile_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/profile_label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_profile_change"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/profile_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_confirm"
        android:visibility="gone" />

    <EditText
        android:id="@+id/input_profile_confirmpass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:visibility="gone" />

    <TextView
        android:id="@+id/profile_label_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password" />

    <EditText
        android:id="@+id/input_profile_pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_profile_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#5cb85c"
        android:text="@string/accept" />

    <Button
        android:id="@+id/button_profile_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#d9534f"
        android:onClick="cancelForm"
        android:text="@string/cancel" />
</LinearLayout>