<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_contact">

    <include layout="@layout/tool_bar"/>

    <FrameLayout android:id="@+id/body_new_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <ScrollView
        android:id="@+id/scroll_new_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_color"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/black"
                android:ems="10"
                android:text="@string/new_contact"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/contact_name" />

                <EditText
                    android:id="@+id/name_new_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="24dp"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/name_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/name_info" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/prompt_email" />

                <EditText
                    android:id="@+id/email_new_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/mail_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="Ingrese un e-mail valido"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/imgage_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/img_info" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/phone_new_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/nameinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/phone_info" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/img_contact" />

                <ImageView
                    android:id="@+id/imgContact"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/default_img"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <Button
                    android:id="@+id/upload_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="0dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="@android:color/darker_gray"
                    android:enabled="true"
                    android:onClick="selectImage"
                    android:text="@string/add_image"
                    android:textColor="#000000"
                    app:strokeColor="#FFFFFF" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_new_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="16dp"
                android:background="#FFFFFF"
                android:backgroundTint="#0275d8"
                android:enabled="true"
                android:onClick="validNewContactForm"
                android:text="@string/create_contact"
                android:textColor="#FFFFFF"
                app:strokeColor="#FFFFFF" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>